# PyJudge

./: .gitignore  LICENSE  README.md  __main__.py  config.py  install_requirements.sh  judge.cmd  judge.py  judge.sh  logger.py  pylintrc  pyproject.toml  requirements.txt
example/: judge.json
examples/: structure.json
examples/Maaike的奇妙冒险（一）/: 序言.md
examples/Maaike的奇妙冒险（一）/A-芝麻开门/: A.md  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/A-芝麻开门/data/: 1.ans
examples/Maaike的奇妙冒险（一）/B-数绵羊/: B.md  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/C-定身魔法/: C.md  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/C-定身魔法/data/: 2.ans  3.ans  4.ans  5.ans  6.ans  7.ans  8.ans
examples/Maaike的奇妙冒险（一）/D-水晶收集/: D.md  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/D-水晶收集/data/: 8.ans
examples/Maaike的奇妙冒险（一）/E-宝石商人/: E.md  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/E-宝石商人/data/: 2.in  3.in  4.in  5.in  6.ans  6.in  7.ans  7.in  8.ans  8.in
examples/Maaike的奇妙冒险（一）/F-牧羊人的诗/: F.md  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/F-牧羊人的诗/data/: 1.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in
examples/Maaike的奇妙冒险（一）/G-魔法石铭文/: G.md  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/G-魔法石铭文/data/: 1.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in
examples/Maaike的奇妙冒险（一）/H-工匠的木棍/: H.md  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/H-工匠的木棍/data/: 1.in  2.in  3.ans  3.in  4.ans  4.in  5.in  (+7 more)
examples/Maaike的奇妙冒险（一）/I-魔王/: I.md  I.py  judge.json  提示.md
examples/Maaike的奇妙冒险（一）/大结局/: 大结局.md
importer/: importer.py
pyjudge/: __main__.py  config.py  judge.py
pyjudge/configs/: global.yml
pyjudge/example/: E.py
(+40 files in other folders)
